--- a/app/index.html
+++ b/app/index.html
@@ -518,9 +518,9 @@
     <usuario-logout ng-if="$ctrl.isLogged" redirect="'/main'"></usuario-logout>
     <img ng-if="!$ctrl.isLogged" src="images/login.svg" alt="">
     <div class="separator"></div>
-    <div>Total</div>
+    <div class="total-mi-pedido">Total</div>
     <img src="images/menu.svg" ng-click="appCtrl.goToPagina('/main');"/>
-    <!--<img src="images/cart.svg" ng-click="appCtrl.goToPagina('/mi-pedido');"/>-->
+    <img src="images/cart.svg" ng-click="appCtrl.goToPagina('/mi-pedido');"/>
     <!--<img src="images/llamar-al-mozo.svg" />-->
     <!--<img src="images/boton-cobrar.svg" />-->
 </div>
