--- a/app/index.html
+++ b/app/index.html
@@ -421,6 +421,7 @@
                         'bower_components/mv-angular-comandas/mv-mi-pedido.js',
                         'bower_components/mv-angular-contacts/mv-contacts.js',
                         'bower_components/mv-angular-cajas/mv-envios.js',
+                        'bower_components/mv-angular-usuarios/mv-cliente-nuevo.js',
 //                        'bower_components/angular-qr-scanner/qr-scanner.js',
 //                        'bower_components/angular-qr-scanner/src/jsqrcode-combined.min.js',
                         'http://platform.twitter.com/widgets.js',
